--- a/dockerwebapp/Dockerfile
+++ b/dockerwebapp/Dockerfile
@@ -1,14 +1,16 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS base
+#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
-COPY ["dockerwebapp.csproj", "./"]
-RUN dotnet restore "./dockerwebapp.csproj"
+COPY ["dockerwebapp/dockerwebapp.csproj", "dockerwebapp/"]
+RUN dotnet restore "dockerwebapp/dockerwebapp.csproj"
 COPY . .
-WORKDIR "/src/."
+WORKDIR "/src/dockerwebapp"
 RUN dotnet build "dockerwebapp.csproj" -c Release -o /app/build
 
 FROM build AS publish
